# rg-heisenberg

./: .gitignore  README.md  pyproject.toml
legacy/: article_figure_2.py  article_figure_3.py
src/notebooks/: paper-1.ipynb  test.ipynb
src/rgheisenberg/: __init__.py  analysis.py  controller.py  kernels.py  phase.py  visualize.py
